--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "~8.2.7",
     "@angular/compiler": "~8.2.7",
     "@angular/core": "~8.2.7",
+    "@angular/flex-layout": "github:angular/flex-layout-builds",
     "@angular/forms": "~8.2.7",
     "@angular/material": "^8.2.2",
     "@angular/platform-browser": "~8.2.7",
