--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.7",
     "@angular/compiler": "~8.2.7",
-    "@angular/core": "~8.2.7",
+    "@angular/core": "^8.2.11",
     "@angular/flex-layout": "github:angular/flex-layout-builds",
     "@angular/forms": "~8.2.7",
     "@angular/material": "^8.2.2",
@@ -26,7 +26,6 @@
     "@angular/router": "~8.2.7",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@sweetalert2/ngx-sweetalert2": "^6.0.1",
-
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
