--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
     "@sweetalert2/ngx-sweetalert2": "^6.0.1",
-    "angular-org-chart": "^1.0.3",
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
+    "panzoom": "^8.4.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "sweetalert2": "^8.18.5",
